<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:hint="@string/name"
            android:inputType="textAutoComplete"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/category"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:entries="@array/Categoria_de_plato"
            android:fontFamily="sans-serif-light"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/prize"
            android:layout_width="104dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:gravity="right"
            android:hint="@string/price"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/euro"
            android:textSize="18sp" />


    </LinearLayout>

    <!--    <TextView-->
    <!--        android:id="@+id/textViewDesc"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Descripcion"-->
    <!--        android:textSize="18sp" />-->

    <EditText
        android:id="@+id/description"
        android:layout_width="410dp"
        android:layout_height="367dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-light"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:textSize="18sp" />


    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@drawable/disegno_botones"
        android:text="@string/button_save"
        android:textColor="@color/white"
        android:textSize="22sp" />

</LinearLayout>
