<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name"
            android:layout_width="576dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:hint="Nombre cliente"
            android:inputType="textAutoComplete"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_horizontal"
                android:text="@string/total_price"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/total_price_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text=""
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/euro"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:hint="Telefono"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/date_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:hint="Fecha y hora de recogida"
            android:inputType="none"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:textSize="16sp" />
        <Button
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:hint="Selecionar fecha y hora de recogida"
            android:textSize="16sp"
            android:backgroundTint="@color/Secondary"/>

        <!-- DatePicker -->


        <!-- TimePicker -->
        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:background="@color/Secondary"
            android:calendarTextColor="@color/black"
            android:color="@color/Secondary"
            android:colorAccent="@color/Secondary"
            android:headerBackground="@color/Secondary"
            android:visibility="invisible"
            android:yearListSelectorColor="@color/Secondary" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Secondary"
            android:headerBackground="@color/Secondary"
            android:numbersSelectorColor="@color/Secondary"
            android:visibility="invisible" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/state"
            android:layout_width="315dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:entries="@array/estados_pedidos"
            android:fontFamily="sans-serif-light"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="+"
            android:textSize="24sp" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_plates"
        android:layout_width="match_parent"
        android:layout_height="315dp"
        android:layout_weight="1"
        android:background="#E3E3E3"

        android:padding="10dp" />


    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:background="@drawable/disegno_botones"
        android:text="@string/button_save"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_gravity="bottom" />


</LinearLayout>
